# OcrLiteAndroidNcnn

./: BUILD.md  INSTRUCTIONS.md  README.md  build.gradle  settings.gradle
.github/workflows/: android.yml
OcrLibrary/: build.gradle
OcrLibrary/src/main/assets/: angle_op.param  dbnet_op.param
OcrLibrary/src/main/cpp/: AngleNet.cpp  CMakeLists.txt  CrnnNet.cpp  DbNet.cpp  OcrLite.cpp  OcrResultUtils.cpp  OcrUtil.cpp  OcrUtils.cpp  main.cpp
OcrLibrary/src/main/cpp/include/: AngleNet.h  CrnnNet.h  DbNet.h  OcrLite.h  OcrResultUtils.h  OcrStruct.h  OcrUtil.h  OcrUtils.h
OcrLibrary/src/main/cpp/include/opencv2/: features2d.hpp  imgproc.hpp  ml.hpp  objdetect.hpp  videoio.hpp
OcrLibrary/src/main/cpp/include/opencv2/core/: mat.hpp
OcrLibrary/src/main/cpp/include/opencv2/stitching/detail/: exposure_compensate.hpp
OcrLibrary/src/main/cpp/include/opencv2/video/: background_segm.hpp
OcrLibrary/src/main/cpp/src/: AngleNet.cpp  CrnnNet.cpp  DbNet.cpp  OcrLite.cpp  main.cpp
OcrLibrary/src/main/java/com/benjaminwan/ocrlibrary/: OcrEngine.kt  OcrResult.kt
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/benjaminwan/ocr/ncnn/: CameraActivity.kt  GalleryActivity.kt  IdCardFrontActivity.kt  ImeiActivity.kt  MainActivity.kt  PlateActivity.kt
app/src/main/java/com/benjaminwan/ocr/onnx/: MainActivity.kt
app/src/main/java/com/benjaminwan/ocr/onnxtoncnn/: CameraActivity.kt  GalleryActivity.kt  ImeiActivity.kt  MainActivity.kt  PlateActivity.kt
app/src/main/res/layout/: activity_camera.xml  activity_gallery.xml  activity_imei.xml  activity_main.xml  rv_debug_view_item.xml
app/src/main/res/values/: strings.xml  styles.xml
appjava/: build.gradle
appjava/src/main/: AndroidManifest.xml
appjava/src/main/java/com/benjaminwan/ocr/java/: MainActivity.java
appjava/src/main/res/layout/: activity_main.xml
appjava/src/main/res/values/: strings.xml  themes.xml
appjava/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+11 files in other folders)
